--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>San Joaquin Valley Town Hall</title>
+	<title>California</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="speaker.css">
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
-		<h2>San Joaquin Valley Town Hall</h2>
+		<h2>California</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<nav id="nav_menu">
