--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>California</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
-	<link rel="stylesheet" href="inedx.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
