--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<img src="" alt="" height="80">
+		<img src="california-ca-state-map-outline-simplified-shape-silhouette-isolated-vector-white-background-346737820.webp" alt="California" height="80">
 		<h2>California</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
