--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 	</header>
 	<nav id="nav_menu">
     	<ul>
-        	<li><a href="../index.html">Home</a></li>
-        	<li><a href="speakers.html">Speakers</a></li>
-        	<li><a href="luncheons.html">Luncheons</a></li>
-        	<li><a href="tickets.html">Tickets</a></li>
-        	<li><a href="aboutus.html"> About Us</a>
+        	<li><a href="index.html">Home</a></li>
+        	<li><a href="">Attractions</a></li>
+        	<li><a href="">History</a></li>
+        	<li><a href="">Offers</a></li>
+        	<li><a href="contactus.html">Contact Us</a>
             	<ul>
-                	<li><a href="#">Our History</a></li>
-                	<li><a href="#">Board of Directors</a></li>
-                	<li><a href="#">Past Speakers</a></li>
-                	<li><a href="#">Contact Information</a></li>
+                	<li><a href="#">Email</a></li>
+                	<li><a href="#">Comment</a></li>
+                	
             	</ul>
         	</li>
     	</ul>
