--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<img src="california-ca-state-map-outline-simplified-shape-silhouette-isolated-vector-white-background-346737820.webp" alt="California" height="80">
 		<h2>California</h2>
-		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
+		<h3> The <span class="shadow">31<sup>st</sup></span> State</h3>
 	</header>
 	<nav id="nav_menu">
     	<ul>
