--- a/index.html
+++ b/index.html
@@ -38,41 +38,20 @@
 					<source src="../media/sampson.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
-				<h2>February<br>Scott Sampson</h2>
-				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the 
-				   Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the 
-				   Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the 
-				   ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number 
-				   of countries in Africa.</p>
-				<p>Scott Sampson is a Canadian-born paleontologist who received his Ph.D. in zoology from the 
-				   University of Toronto. His doctoral work focused on two new species of ceratopsids (horned 
-				   dinosaurs) from the Late Cretaceous of Montana, as well as the growth and function of certopsid 
-				   horns and frills.</p>
-				<p>Following graduation in 1993, Sampson spent a year working at the American Museum of Natural 
-				   History in New York City, followed by five years as assistant professor of anatomy at the New 
-				   York College of Osteopathic Medicine on Long Island. He arrived at the University of Utah 
-				   accepting a dual position as assistant professor in the Department of Geology and Geophysics 
-				   and curator of vertebrate paleontology at the Utah Museum of Natural History. His research 
-				   interests largely revolve around the phylogenetics, functional morphology, and evolution of 
-				   Late Cretaceous dinosaurs.</p>
-				<p>In addition to his museum and laboratory-based studies, Sampson has conducted paleontological 
-				   work in Zimbabwe, South Africa, and Madagascar, as well as the United States and Canada. He was 
-				   also the on-air host for the Discovery Channel's Dinosaur Planet and recently completed a book, 
-				   Dinosaur Odyssey: Fossil Threads in the Web of Life, which is one of the most 
-				   comprehensive surveys of dinosaurs and their worlds to date.</p>
+				
 			</article>
 		</section>
 		
 		<aside>
-			<h2>Guest speakers</h2>
-			<h3>October<br><a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
+			<h2>More places like California</h2>
+			<h3><br><a href="../speakers/brancaccio.html">Arizona</a></h3>
+			<img src="../images/brancaccio75.jpg" alt=" ">
+			<h3><br><a href="../speakers/sorkin.html">Colorado</a></h3>
+			<img src="../images/sorkin75.jpg" alt=" ">
+			<h3><br><a href="../speakers/chua.html">Texas</a></h3>
+			<img src="../images/chua75.jpg" alt=" ">
+			<h3><br><a href="../speakers/sampson.html">Oregon</a></h3>
+			<img src="../images/sampson75.jpg" alt=" ">
 		</aside>
 	</main>
 	<footer>
