--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2024, John H. Francis Polytechnic Senior High School</p>
 	</footer>
 </body>
 </html>
