--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<nav id="nav_menu">
     	<ul>
         	<li><a href="index.html">Home</a></li>
-        	<li><a href="">Attractions</a></li>
-        	<li><a href="">History</a></li>
-        	<li><a href="">Offers</a></li>
-        	<li><a href="contactus.html">Contact Us</a>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/attractions.html">Attractions</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/history.html">History</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/offers.html">Offers</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/contactus.html">Contact Us</a>
             	<ul>
                 	<li><a href="#">Email</a></li>
                 	<li><a href="#">Comment</a></li>
