--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 					<source src="../media/sampson.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
-				
+				<h2>Welcome to California</h2>
+				<p>California, often called the "Golden State," is a dynamic and diverse state located on the west coast of the United States. 
+					Known for its stunning landscapes, vibrant culture, and booming economy, California is a destination like no other. 
+					Whether you're drawn to the sparkling beaches, towering mountains, or lively cities, California offers something for everyone.</p>
 			</article>
 		</section>
 		
