--- a/index.html
+++ b/index.html
@@ -32,16 +32,25 @@
 	</nav>
 	<main>
 		<section>
-			<h1>Fossil Threads in the Web of Life</h1>
+			<h1>Welcome to California</h1>
 			<article>
 				<video controls poster="../images/poster.png">
 					<source src="../media/sampson.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
-				<h2>Welcome to California</h2>
+				
 				<p>California, often called the "Golden State," is a dynamic and diverse state located on the west coast of the United States. 
 					Known for its stunning landscapes, vibrant culture, and booming economy, California is a destination like no other. 
 					Whether you're drawn to the sparkling beaches, towering mountains, or lively cities, California offers something for everyone.</p>
+				<h2>Vibrant Cities</h2>		
+				<p>California is home to world-renowned cities, each with its unique character and charm:
+
+				Los Angeles: The entertainment capital of the world, known for Hollywood, cultural diversity, and iconic landmarks like the Hollywood Sign, Griffith Observatory, and Venice Beach.
+				San Francisco: Famous for the Golden Gate Bridge, Alcatraz Island, and its thriving tech industry.
+				San Diego: With its year-round mild climate, stunning beaches, and family-friendly attractions like the San Diego Zoo and Balboa Park.
+				Sacramento: The state capital, rich in history and home to charming neighborhoods and beautiful parks.</p>
+			
+			
 			</article>
 		</section>
 		
