--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 		
 		<aside>
 			<h2>More places like California</h2>
-			<h3><br><a href="../speakers/brancaccio.html">Arizona</a></h3>
-			<img src="../images/brancaccio75.jpg" alt=" ">
-			<h3><br><a href="../speakers/sorkin.html">Colorado</a></h3>
-			<img src="../images/sorkin75.jpg" alt=" ">
-			<h3><br><a href="../speakers/chua.html">Texas</a></h3>
-			<img src="../images/chua75.jpg" alt=" ">
-			<h3><br><a href="../speakers/sampson.html">Oregon</a></h3>
-			<img src="../images/sampson75.jpg" alt=" ">
+			<h3><br><a href="https://az.gov/">Arizona</a></h3>
+			<img src="images/arizona-travel-guide-pages-NationalGeographic_1127129.png" alt="Arizona">
+			<h3><br><a href="https://www.colorado.gov/">Colorado</a></h3>
+			<img src="images/colorado-travel-guide-pages.png" alt="Colorado">
+			<h3><br><a href="https://www.texas.gov/">Texas</a></h3>
+			<img src="images/texas-travel-guide-pages-NationalGeographic_1164642.png" alt="Texas">
+			<h3><br><a href="https://www.oregon.gov/Pages/index.aspx">Oregon</a></h3>
+			<img src="images/Oregon_h_00000201296107.png" alt="Oregon">
 		</aside>
 	</main>
 	<footer>
