--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<img src="california-ca-state-map-outline-simplified-shape-silhouette-isolated-vector-white-background-346737820.webp" alt="California" height="80">
+		<img src="images/california.png" alt="California" height="80">
 		<h2>California</h2>
 		<h3> The <span class="shadow">31<sup>st</sup></span> State</h3>
 	</header>
