--- a/attractions.html
+++ b/attractions.html
@@ -11,27 +11,20 @@
 
 <body>
 	<header>
-		<img src="california-ca-state-map-outline-simplified-shape-silhouette-isolated-vector-white-background-346737820.webp" alt="California" height="80">
+		<img src="images/california.png" alt="California" height="80">
 		<h2>California</h2>
 		<h3> The <span class="shadow">31<sup>st</sup></span> State</h3>
 	</header>
 	<nav id="nav_menu">
     	<ul>
         	<li><a href="index.html">Home</a></li>
-        	<li><a href="">Attractions</a></li>
-        	<li><a href="">History</a></li>
-        	<li><a href="">Offers</a></li>
-        	<li><a href="contactus.html">Contact Us</a>
-            	<ul>
-                	<li><a href="#">Email</a></li>
-                	<li><a href="#">Comment</a></li>
-                	
-            	</ul>
-        	</li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/attractions.html">Attractions</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/history.html">History</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/offers.html">Offers</a></li>
+        	
     	</ul>
 	</nav>
 	<main>
-		
 		
 	</main>
 	<footer>
