--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 		<section>
 			<h1>Welcome to California</h1>
 			<article>
-				<video controls poster="../images/poster.png">
-					<source src="../media/sampson.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video>
+				<img src="images/475457-Los-Angeles.png" alt="Los Angeles">
 				
 				<p>California, often called the "Golden State," is a dynamic and diverse state located on the west coast of the United States. 
 					Known for its stunning landscapes, vibrant culture, and booming economy, California is a destination like no other. 
