--- a/index.html
+++ b/index.html
@@ -51,17 +51,26 @@
 		</section>
 		
 		<aside>
-			<h2>More places like California</h2>
-			<h3><br><a href="https://az.gov/">Arizona</a></h3>
-			<img src="images/arizona-travel-guide-pages-NationalGeographic_1127129.png" alt="Arizona">
-			<h3><br><a href="https://www.colorado.gov/">Colorado</a></h3>
-			<img src="images/colorado-travel-guide-pages.png" alt="Colorado">
-			<h3><br><a href="https://www.texas.gov/">Texas</a></h3>
-			<img src="images/texas-travel-guide-pages-NationalGeographic_1164642.png" alt="Texas">
-			<h3><br><a href="https://www.oregon.gov/Pages/index.aspx">Oregon</a></h3>
-			<img src="images/Oregon_h_00000201296107.png" alt="Oregon">
-			
-		</aside>
+  <h2>More places like California</h2>
+  <ul>
+    <li>
+      <a href="https://az.gov/">Arizona</a>
+      <img src="images/arizona-travel-guide-pages-NationalGeographic_1127129.png" alt="Arizona">
+    </li>
+    <li>
+      <a href="https://www.colorado.gov/">Colorado</a>
+      <img src="images/colorado-travel-guide-pages.png" alt="Colorado">
+    </li>
+    <li>
+      <a href="https://www.texas.gov/">Texas</a>
+      <img src="images/texas-travel-guide-pages-NationalGeographic_1164642.png" alt="Texas">
+    </li>
+    <li>
+      <a href="https://www.oregon.gov/Pages/index.aspx">Oregon</a>
+      <img src="images/Oregon_h_00000201296107.png" alt="Oregon">
+    </li>
+  </ul>
+</aside>
 	</main>
 	<footer>
 		<p>&copy; 2024, John H. Francis Polytechnic Senior High School</p>
