--- a/attractions.html
+++ b/attractions.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>California</title>
+	<link rel="shortcut icon" href="../images/favicon.ico">
+	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="index.css">
 </head>
 
@@ -19,10 +21,16 @@
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/attractions.html">Attractions</a></li>
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/history.html">History</a></li>
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/offers.html">Offers</a></li>
-        	
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/contactus.html">Contact Us</a>
+            	<ul>
+                	<li><a href="#">Email</a></li>
+                	
+            	</ul>
+        	</li>
     	</ul>
 	</nav>
 	<main>
+		
 		
 	</main>
 	<footer>
