--- a/history.html
+++ b/history.html
@@ -3,81 +3,61 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>San Joaquin Valley Town Hall</title>
+	<title>California</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
-	<link rel="stylesheet" href="../styles/speaker.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 	<header>
-		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
-		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
+		<img src="images/california.png" alt="California" height="80">
+		<h2>California</h2>
+		<h3> The <span class="shadow">31<sup>st</sup></span> State</h3>
 	</header>
 	<nav id="nav_menu">
     	<ul>
-        	<li><a href="../index.html">Home</a></li>
-        	<li><a href="speakers.html">Speakers</a></li>
-        	<li><a href="luncheons.html">Luncheons</a></li>
-        	<li><a href="tickets.html">Tickets</a></li>
-        	<li><a href="aboutus.html"> About Us</a>
+        	<li><a href="index.html">Home</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/attractions.html">Attractions</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/history.html">History</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/offers.html">Offers</a></li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/contactus.html">Contact Us</a>
             	<ul>
-                	<li><a href="#">Our History</a></li>
-                	<li><a href="#">Board of Directors</a></li>
-                	<li><a href="#">Past Speakers</a></li>
-                	<li><a href="#">Contact Information</a></li>
+                	<li><a href="#">Email</a></li>
+                	
             	</ul>
         	</li>
     	</ul>
 	</nav>
 	<main>
-		<section>
-			<h1>Fossil Threads in the Web of Life</h1>
-			<article>
-				<video controls poster="../images/poster.png">
-					<source src="../media/sampson.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video>
-				<h2>February<br>Scott Sampson</h2>
-				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the 
-				   Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the 
-				   Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the 
-				   ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number 
-				   of countries in Africa.</p>
-				<p>Scott Sampson is a Canadian-born paleontologist who received his Ph.D. in zoology from the 
-				   University of Toronto. His doctoral work focused on two new species of ceratopsids (horned 
-				   dinosaurs) from the Late Cretaceous of Montana, as well as the growth and function of certopsid 
-				   horns and frills.</p>
-				<p>Following graduation in 1993, Sampson spent a year working at the American Museum of Natural 
-				   History in New York City, followed by five years as assistant professor of anatomy at the New 
-				   York College of Osteopathic Medicine on Long Island. He arrived at the University of Utah 
-				   accepting a dual position as assistant professor in the Department of Geology and Geophysics 
-				   and curator of vertebrate paleontology at the Utah Museum of Natural History. His research 
-				   interests largely revolve around the phylogenetics, functional morphology, and evolution of 
-				   Late Cretaceous dinosaurs.</p>
-				<p>In addition to his museum and laboratory-based studies, Sampson has conducted paleontological 
-				   work in Zimbabwe, South Africa, and Madagascar, as well as the United States and Canada. He was 
-				   also the on-air host for the Discovery Channel's Dinosaur Planet and recently completed a book, 
-				   Dinosaur Odyssey: Fossil Threads in the Web of Life, which is one of the most 
-				   comprehensive surveys of dinosaurs and their worlds to date.</p>
-			</article>
-		</section>
+		<h1>California History</h1>
+			
+				<p>California has a rich and diverse history that spans thousands of years. From the indigenous peoples who first inhabited the land to the state's role in the Gold Rush and the modern-day tech boom, California's story is one of innovation, migration, and cultural transformation.</p>
+
+				<h2>Early History</h2>
+				<p>The first inhabitants of California were Native American tribes, including the Chumash, Pomo, and Ohlone, who lived in the region for thousands of years. Their cultures were diverse, with each tribe having its own language, traditions, and ways of life. These indigenous peoples made significant contributions to California’s cultural heritage, including art, agriculture, and religious practices.</p>
+
+				<h2>The Spanish Era and Mission System</h2>
+				<p>In the late 18th century, Spanish explorers, led by figures like Juan Bautista de Anza and Gaspar de Portolá, began colonizing California. They established missions, presidios, and towns along the coast. The California mission system, founded by Father Junípero Serra, played a central role in the state's early development, though it also led to the displacement of Native American populations.</p>
+
+				<h2>California and the Gold Rush</h2>
+				<p>In 1848, the discovery of gold at Sutter's Mill near Sacramento sparked the famous California Gold Rush. Tens of thousands of people from all over the world flocked to California, leading to rapid population growth and the transformation of the state's economy. The Gold Rush had lasting effects on California’s demographic landscape and accelerated its path to statehood.</p>
+
+				<h2>Statehood and the 20th Century</h2>
+				<p>California was admitted as the 31st state of the United States on September 9, 1850. Over the following decades, the state grew rapidly, driven by immigration, agriculture, and the rise of industries such as film, technology, and aerospace. The 20th century saw California become a global cultural and economic powerhouse, with cities like Los Angeles and San Francisco becoming world-renowned centers for entertainment, technology, and finance.</p>
+
+				<h2>Modern California</h2>
+				<p>Today, California is known for its diverse population, booming economy, and innovative industries, including Silicon Valley and Hollywood. It remains a leader in cultural, technological, and environmental fields, continuing to shape the nation's future while preserving its rich history.</p>
+
+				<h2>California Laws</h2>
+				<p>California's legal framework is built on both state and federal laws. A key resource for understanding California's laws is the state's constitution, which outlines the government structure and the rights of its citizens. To learn more about the laws that have shaped California, you can access the official documents here:</p>
+				<a href="path_to_your_pdf/the_constitutions_of_california_and_the_united_states2.pdf" target="_blank">The Constitutions of California and the United States</a>
+
+			
 		
-		<aside>
-			<h2>Guest speakers</h2>
-			<h3>October<br><a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2024, John H. Francis Polytechnic Senior High School</p>
 	</footer>
 </body>
 </html>
