--- a/history.html
+++ b/history.html
@@ -30,6 +30,7 @@
     	</ul>
 	</nav>
 	<main>
+		<section>
 		<h1>California History</h1>
 			
 				<p>California has a rich and diverse history that spans thousands of years. From the indigenous peoples who first inhabited the land to the state's role in the Gold Rush and the modern-day tech boom, California's story is one of innovation, migration, and cultural transformation.</p>
@@ -52,8 +53,7 @@
 				<h2>California Laws</h2>
 				<p>California's legal framework is built on both state and federal laws. A key resource for understanding California's laws is the state's constitution, which outlines the government structure and the rights of its citizens. To learn more about the laws that have shaped California, you can access the official documents here:</p>
 				<a href="path_to_your_pdf/the_constitutions_of_california_and_the_united_states2.pdf" target="_blank">The Constitutions of California and the United States</a>
-
-			
+		</section>
 		
 	</main>
 	<footer>
