--- a/contactus.html
+++ b/contactus.html
@@ -3,81 +3,46 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>San Joaquin Valley Town Hall</title>
+	<title>Contact Us</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/normalize.css">
-	<link rel="stylesheet" href="../styles/speaker.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 	<header>
-		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
-		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
+		<img src="images/california.png" alt="California" height="80">
+		<h2>Contact Us</h2>
+		<h3>We'd Love to Hear from You!</h3>
 	</header>
+
 	<nav id="nav_menu">
     	<ul>
-        	<li><a href="../index.html">Home</a></li>
-        	<li><a href="speakers.html">Speakers</a></li>
-        	<li><a href="luncheons.html">Luncheons</a></li>
-        	<li><a href="tickets.html">Tickets</a></li>
-        	<li><a href="aboutus.html"> About Us</a>
-            	<ul>
-                	<li><a href="#">Our History</a></li>
-                	<li><a href="#">Board of Directors</a></li>
-                	<li><a href="#">Past Speakers</a></li>
-                	<li><a href="#">Contact Information</a></li>
-            	</ul>
-        	</li>
+        	<li><a href="index.html">Home</a></li>
+        	<li><a href="attractions.html">Attractions</a></li>
+        	<li><a href="history.html">History</a></li>
+        	<li><a href="offers.html">Offers</a></li>
+        	<li><a href="contactus.html">Contact Us</a></li>
     	</ul>
 	</nav>
+
 	<main>
 		<section>
-			<h1>Fossil Threads in the Web of Life</h1>
+			<h1>Get in Touch</h1>
 			<article>
-				<video controls poster="../images/poster.png">
-					<source src="../media/sampson.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video>
-				<h2>February<br>Scott Sampson</h2>
-				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the 
-				   Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the 
-				   Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the 
-				   ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number 
-				   of countries in Africa.</p>
-				<p>Scott Sampson is a Canadian-born paleontologist who received his Ph.D. in zoology from the 
-				   University of Toronto. His doctoral work focused on two new species of ceratopsids (horned 
-				   dinosaurs) from the Late Cretaceous of Montana, as well as the growth and function of certopsid 
-				   horns and frills.</p>
-				<p>Following graduation in 1993, Sampson spent a year working at the American Museum of Natural 
-				   History in New York City, followed by five years as assistant professor of anatomy at the New 
-				   York College of Osteopathic Medicine on Long Island. He arrived at the University of Utah 
-				   accepting a dual position as assistant professor in the Department of Geology and Geophysics 
-				   and curator of vertebrate paleontology at the Utah Museum of Natural History. His research 
-				   interests largely revolve around the phylogenetics, functional morphology, and evolution of 
-				   Late Cretaceous dinosaurs.</p>
-				<p>In addition to his museum and laboratory-based studies, Sampson has conducted paleontological 
-				   work in Zimbabwe, South Africa, and Madagascar, as well as the United States and Canada. He was 
-				   also the on-air host for the Discovery Channel's Dinosaur Planet and recently completed a book, 
-				   Dinosaur Odyssey: Fossil Threads in the Web of Life, which is one of the most 
-				   comprehensive surveys of dinosaurs and their worlds to date.</p>
+				<p>If you have any questions, feedback, or need assistance, feel free to reach out to us! We are happy to help you plan your next visit to California.</p>
+
+				<h2>Email Us</h2>
+				<p>You can contact us via email at <a href="mailto:info@californiaexplore.com">info@californiaexplore.com</a>. We respond to all inquiries within 48 hours.</p>
 			</article>
 		</section>
-		
-		<aside>
-			<h2>Guest speakers</h2>
-			<h3>October<br><a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
-		</aside>
 	</main>
+
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2024, John H. Francis Polytechnic Senior High School</p>
 	</footer>
+
 </body>
+
 </html>
+
