--- a/contactus.html
+++ b/contactus.html
@@ -30,10 +30,10 @@
 		<section>
 			<h1>Get in Touch</h1>
 			<article>
-				<p>If you have any questions, feedback, or need assistance, feel free to reach out to us! We are happy to help you plan your next visit to California.</p>
+				<p>If you have any questions, feedback, or need assistance, feel free to reach out to me!</p>
 
 				<h2>Email Us</h2>
-				<p>You can contact us via email at <a href="mailto:info@californiaexplore.com">info@californiaexplore.com</a>. We respond to all inquiries within 48 hours.</p>
+				<p>You can contact me via email at <a href="mailto:jr20072807@gmail.com">jr20072807@gmail.com</a>. </p>
 			</article>
 		</section>
 	</main>
