--- a/offers.html
+++ b/offers.html
@@ -21,12 +21,8 @@
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/attractions.html">Attractions</a></li>
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/history.html">History</a></li>
         	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/offers.html">Offers</a></li>
-        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/contactus.html">Contact Us</a>
-            	<ul>
-                	<li><a href="#">Email</a></li>
-                	
-            	</ul>
-        	</li>
+        	<li><a href="https://jo12121212.github.io/LAMC-CIS148-project_JoesphRodriguez/contactus.html">Contact Us</a></li>
+        	
     	</ul>
 	</nav>
 	<main>
